--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cards.css</title>
 
+<link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
 
 
 </head>
-<body>
+<body id="te">
+    <div id="toLocateCharacters" class="container">
 
+    </div>
 
    <script src="./script.js"></script>
 </body>
